force-app/main/default/objects/Calendar_Event_Template__c/Calendar_Event_Template__c.object-meta.xml
<CustomObject>
    <description>Reusable event defaults managed by calendar security admins.</description>
    <label>Calendar Event Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Event Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>