force-app/main/default/objects/Calendar_Event_Template__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <type>Lookup</type>
    <description>Default team calendar applied when this template is selected.</description>
    <inlineHelpText>Select the Team Calendar that should be pre-filled for this template.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>Team_Calendar__c</referenceTo>
    <relationshipLabel>Event Templates</relationshipLabel>
    <relationshipName>Event_Templates</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>