force-app/main/default/objects/Calendar_Event_Template__c/fields/Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Status__c</fullName>
    <type>Text</type>
    <description>Default event status applied when this template is selected.</description>
    <inlineHelpText>Enter the status that new events should use by default for this template.</inlineHelpText>
    <label>Default Status</label>
    <length>100</length>
</CustomField>