force-app/main/default/objects/Calendar_Event_Template__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <type>Number</type>
    <description>Default duration used to calculate the end time for new events.</description>
    <inlineHelpText>Enter the template duration in whole minutes.</inlineHelpText>
    <label>Duration Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>