force-app/main/default/objects/Calendar_Event_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Controls whether the template appears in the event create modal.</description>
    <inlineHelpText>Uncheck to hide this template from event creators without deleting it.</inlineHelpText>
    <label>Is Active</label>
</CustomField>