force-app/main/default/objects/Calendar_Event_Template__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <type>LongTextArea</type>
    <description>Default notes copied into the event form when the template is selected.</description>
    <inlineHelpText>Enter reusable instructions or details for this template.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
</CustomField>